# llvm-exp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: setup-dependencies.cmake
libs/kaleidoscope/: CMakeLists.txt
libs/kaleidoscope/include/core/: sample.hpp
libs/kaleidoscope/include/kaleidoscope/: lexer.hpp  token.hpp
libs/kaleidoscope/include/kaleidoscope/ast/: binary_expression.hpp  expression.hpp  function_call_expression.hpp  function_definition.hpp  function_prototype.hpp  node.hpp  number_expression.hpp  variable_expression.hpp
libs/kaleidoscope/src/: lexer.cpp  sample.cpp  token.cpp
libs/kaleidoscope/src/ast/: binary_expression.cpp  expression.cpp  function_call_expression.cpp  function_definition.cpp  function_prototype.cpp  node.cpp  number_expression.cpp  variable_expression.cpp
libs/kaleidoscope/tests/: ast.test.cpp  lexer.test.cpp  sample.test.cpp
samples/: CMakeLists.txt
samples/kaleidoscope/basic/: CMakeLists.txt  basic-sample.cpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt
tests/integration/kaleidoscope/: CMakeLists.txt
tests/integration/kaleidoscope/code-samples/: fib.ksc  trig-extern.ksc
tests/integration/kaleidoscope/tests/: sample.test.cpp
